Added useLogin hook in order to add login functionality from user in DB, modified CorsConfig and .gitignore